# QTLab_7

./: README.md
Calc/: CMakeLists.txt  Calc_Button.qml  SmartTextField.qml  UI_functions.js  calc_back.cpp  calc_back.h  main.cpp  main.qml
